rlctbg/raylib.py


_rl.DrawRectangleGradientV.argtypes = [c_int, c_int, c_int, c_int, Color, Color]
_rl.DrawRectangleGradientV.restype = None
def draw_rectangle_gradient_v(pos_x: int, pos_y: int, width: int, height: int, color1: Color, color2: Color) -> None:
    _rl.DrawRectangleGradientV(pos_x, pos_y, width, height, color1, color2)


_rl.DrawRectangleGradientH.argtypes = [c_int, c_int, c_int, c_int, Color, Color]
_rl.DrawRectangleGradientH.restype = None
def draw_rectangle_gradient_h(pos_x: int, pos_y: int, width: int, height: int, color1: Color, color2: Color) -> None:
    _rl.DrawRectangleGradientH(pos_x, pos_y, width, height, color1, color2)


_rl.DrawRectangleGradientEx.argtypes = [Rectangle, Color, Color, Color, Color]
_rl.DrawRectangleGradientEx.restype = None
def draw_rectangle_gradient_ex(rec: Rectangle, col1: Color, col2: Color, col3: Color, col4: Color) -> None:
    _rl.DrawRectangleGradientEx(rec, col1, col2, col3, col4)


_rl.DrawRectangleLines.argtypes = [c_int, c_int, c_int, c_int, Color]
_rl.DrawRectangleLines.restype = None
def draw_rectangle_lines(pos_x: int, pos_y: int, width: int, height: int, color: Color) -> None:
    _rl.DrawRectangleLines(pos_x, pos_y, width, height, color)


_rl.DrawRectangleLinesEx.argtypes = [Rectangle, c_int, Color]
_rl.DrawRectangleLinesEx.restype = None
def draw_rectangle_lines_ex(rec: Rectangle, line_thick: int, color: Color) -> None:
    _rl.DrawRectangleLinesEx(rec, line_thick, color)


_rl.DrawRectangleRounded.argtypes = [Rectangle, c_float, c_int, Color]
_rl.DrawRectangleRounded.restype = None
def draw_rectangle_rounded(rec: Rectangle, roundness: float, segments: int, color: Color) -> None:
    _rl.DrawRectangleRounded(rec, roundness, segments, color)


_rl.DrawRectangleRoundedLines.argtypes = [Rectangle, c_float, c_int, c_int, Color]
_rl.DrawRectangleRoundedLines.restype = None
def draw_rectangle_rounded_lines(rec: Rectangle, roundness: float, segments: int, line_thick: int, color: Color) -> None:
    _rl.DrawRectangleRoundedLines(rec, roundness, segments, line_thick, color)


_rl.DrawTriangle.argtypes = [Vector2, Vector2, Vector2, Color]
_rl.DrawTriangle.restype = None
def draw_triangle(v1: Vector2, v2: Vector2, v3: Vector2, color: Color) -> None:
    _rl.DrawTriangle(v1, v2, v3, color)


_rl.DrawTriangleLines.argtypes = [Vector2, Vector2, Vector2, Color]
_rl.DrawTriangleLines.restype = None
def draw_triangle_lines(v1: Vector2, v2: Vector2, v3: Vector2, color: Color) -> None:
    _rl.DrawTriangleLines(v1, v2, v3, color)


_rl.DrawTriangleFan.argtypes = [POINTER(Vector2), c_int, Color]
_rl.DrawTriangleFan.restype = None
def draw_triangle_fan(points: POINTER(Vector2), num_points: int, color: Color) -> None:
    _rl.DrawTriangleFan(points, num_points, color)


_rl.DrawTriangleStrip.argtypes = [POINTER(Vector2), c_int, Color]
_rl.DrawTriangleStrip.restype = None
def draw_triangle_strip(points: POINTER(Vector2), points_count: int, color: Color) -> None:
    _rl.DrawTriangleStrip(points, points_count, color)


_rl.DrawPoly.argtypes = [Vector2, c_int, c_float, c_float, Color]
_rl.DrawPoly.restype = None
def draw_poly(center: Vector2, sides: int, radius: float, rotation: float, color: Color) -> None:
    _rl.DrawPoly(center, sides, radius, rotation, color)


_rl.DrawPolyLines.argtypes = [Vector2, c_int, c_float, c_float, Color]
_rl.DrawPolyLines.restype = None
def draw_poly_lines(center: Vector2, sides: int, radius: float, rotation: float, color: Color) -> None:
    _rl.DrawPolyLines(center, sides, radius, rotation, color)


_rl.SetShapesTexture.argtypes = [Texture2D, Rectangle]
_rl.SetShapesTexture.restype = None
def set_shapes_texture(texture: Texture2D, source: Rectangle) -> None:
    _rl.SetShapesTexture(texture, source)


_rl.CheckCollisionRecs.argtypes = [Rectangle, Rectangle]
_rl.CheckCollisionRecs.restype = c_bool
def check_collision_recs(rec1: Rectangle, rec2: Rectangle) -> bool:
    return _rl.CheckCollisionRecs(rec1, rec2)


_rl.CheckCollisionCircles.argtypes = [Vector2, c_float, Vector2, c_float]
_rl.CheckCollisionCircles.restype = c_bool
def check_collision_circles(center1: Vector2, radius1: float, center2: Vector2, radius2: float) -> bool:
    return _rl.CheckCollisionCircles(center1, radius1, center2, radius2)


_rl.CheckCollisionCircleRec.argtypes = [Vector2, c_float, Rectangle]
_rl.CheckCollisionCircleRec.restype = c_bool
def check_collision_circle_rec(center: Vector2, radius: float, rec: Rectangle) -> bool:
    return _rl.CheckCollisionCircleRec(center, radius, rec)


_rl.GetCollisionRec.argtypes = [Rectangle, Rectangle]
_rl.GetCollisionRec.restype = Rectangle
def get_collision_rec(rec1: Rectangle, rec2: Rectangle) -> Rectangle:
    return _rl.GetCollisionRec(rec1, rec2)


_rl.CheckCollisionPointRec.argtypes = [Vector2, Rectangle]
_rl.CheckCollisionPointRec.restype = c_bool
def check_collision_point_rec(point: Vector2, rec: Rectangle) -> bool:
    return _rl.CheckCollisionPointRec(point, rec)


_rl.CheckCollisionPointCircle.argtypes = [Vector2, Vector2, c_float]
_rl.CheckCollisionPointCircle.restype = c_bool
def check_collision_point_circle(point: Vector2, center: Vector2, radius: float) -> bool:
    return _rl.CheckCollisionPointCircle(point, center, radius)


_rl.CheckCollisionPointTriangle.argtypes = [Vector2, Vector2, Vector2, Vector2]
_rl.CheckCollisionPointTriangle.restype = c_bool
def check_collision_point_triangle(point: Vector2, p1: Vector2, p2: Vector2, p3: Vector2) -> bool:
    return _rl.CheckCollisionPointTriangle(point, p1, p2, p3)


_rl.LoadImage.argtypes = [c_char_p]
_rl.LoadImage.restype = Image
def load_image(file_name: bytes) -> Image:
    return _rl.LoadImage(file_name)


_rl.LoadImageEx.argtypes = [POINTER(Color), c_int, c_int]
_rl.LoadImageEx.restype = Image
def load_image_ex(pixels: POINTER(Color), width: int, height: int) -> Image:
    return _rl.LoadImageEx(pixels, width, height)


_rl.LoadImagePro.argtypes = [c_void_p, c_int, c_int, c_int]
_rl.LoadImagePro.restype = Image
def load_image_pro(data: int, width: int, height: int, format: int) -> Image:
    return _rl.LoadImagePro(data, width, height, format)


_rl.LoadImageRaw.argtypes = [c_char_p, c_int, c_int, c_int, c_int]
_rl.LoadImageRaw.restype = Image
def load_image_raw(file_name: bytes, width: int, height: int, format: int, header_size: int) -> Image:
    return _rl.LoadImageRaw(file_name, width, height, format, header_size)


_rl.ExportImage.argtypes = [Image, c_char_p]
_rl.ExportImage.restype = None
def export_image(image: Image, file_name: bytes) -> None:
    _rl.ExportImage(image, file_name)


_rl.ExportImageAsCode.argtypes = [Image, c_char_p]
_rl.ExportImageAsCode.restype = None
def export_image_as_code(image: Image, file_name: bytes) -> None:
    _rl.ExportImageAsCode(image, file_name)


_rl.LoadTexture.argtypes = [c_char_p]
_rl.LoadTexture.restype = Texture2D
def load_texture(file_name: bytes) -> Texture2D:
    return _rl.LoadTexture(file_name)


_rl.LoadTextureFromImage.argtypes = [Image]
_rl.LoadTextureFromImage.restype = Texture2D
def load_texture_from_image(image: Image) -> Texture2D:
    return _rl.LoadTextureFromImage(image)


_rl.LoadTextureCubemap.argtypes = [Image, c_int]
_rl.LoadTextureCubemap.restype = TextureCubemap
def load_texture_cubemap(image: Image, layout_type: int) -> TextureCubemap:
    return _rl.LoadTextureCubemap(image, layout_type)


_rl.LoadRenderTexture.argtypes = [c_int, c_int]
_rl.LoadRenderTexture.restype = RenderTexture2D
def load_render_texture(width: int, height: int) -> RenderTexture2D:
    return _rl.LoadRenderTexture(width, height)


_rl.UnloadImage.argtypes = [Image]
_rl.UnloadImage.restype = None
def unload_image(image: Image) -> None:
    _rl.UnloadImage(image)


_rl.UnloadTexture.argtypes = [Texture2D]
_rl.UnloadTexture.restype = None
def unload_texture(texture: Texture2D) -> None:
    _rl.UnloadTexture(texture)


_rl.UnloadRenderTexture.argtypes = [RenderTexture2D]
_rl.UnloadRenderTexture.restype = None
def unload_render_texture(target: RenderTexture2D) -> None:
    _rl.UnloadRenderTexture(target)


_rl.GetImageData.argtypes = [Image]
_rl.GetImageData.restype = POINTER(Color)
def get_image_data(image: Image) -> POINTER(Color):
    return _rl.GetImageData(image)


_rl.GetImageDataNormalized.argtypes = [Image]
_rl.GetImageDataNormalized.restype = POINTER(Vector4)
def get_image_data_normalized(image: Image) -> POINTER(Vector4):
    return _rl.GetImageDataNormalized(image)


_rl.GetImageAlphaBorder.argtypes = [Image, c_float]
_rl.GetImageAlphaBorder.restype = Rectangle
def get_image_alpha_border(image: Image, threshold: float) -> Rectangle:
    return _rl.GetImageAlphaBorder(image, threshold)


_rl.GetPixelDataSize.argtypes = [c_int, c_int, c_int]
_rl.GetPixelDataSize.restype = c_int
def get_pixel_data_size(width: int, height: int, format: int) -> int:
    return _rl.GetPixelDataSize(width, height, format)


_rl.GetTextureData.argtypes = [Texture2D]
_rl.GetTextureData.restype = Image
def get_texture_data(texture: Texture2D) -> Image:
    return _rl.GetTextureData(texture)


_rl.GetScreenData.argtypes = []
_rl.GetScreenData.restype = Image
def get_screen_data() -> Image:
    return _rl.GetScreenData()


_rl.UpdateTexture.argtypes = [Texture2D, c_void_p]
_rl.UpdateTexture.restype = None
def update_texture(texture: Texture2D, pixels: int) -> None:
    _rl.UpdateTexture(texture, pixels)


_rl.ImageCopy.argtypes = [Image]
_rl.ImageCopy.restype = Image
def image_copy(image: Image) -> Image:
    return _rl.ImageCopy(image)


_rl.ImageFromImage.argtypes = [Image, Rectangle]
_rl.ImageFromImage.restype = Image
def image_from_image(image: Image, rec: Rectangle) -> Image:
    return _rl.ImageFromImage(image, rec)


_rl.ImageToPOT.argtypes = [POINTER(Image), Color]
_rl.ImageToPOT.restype = None
def image_to_pot(image: POINTER(Image), fill_color: Color) -> None:
    _rl.ImageToPOT(image, fill_color)


_rl.ImageFormat.argtypes = [POINTER(Image), c_int]
_rl.ImageFormat.restype = None
def image_format(image: POINTER(Image), new_format: int) -> None:
    _rl.ImageFormat(image, new_format)


_rl.ImageAlphaMask.argtypes = [POINTER(Image), Image]
_rl.ImageAlphaMask.restype = None
def image_alpha_mask(image: POINTER(Image), alpha_mask: Image) -> None:
    _rl.ImageAlphaMask(image, alpha_mask)


_rl.ImageAlphaClear.argtypes = [POINTER(Image), Color, c_float]
_rl.ImageAlphaClear.restype = None
def image_alpha_clear(image: POINTER(Image), color: Color, threshold: float) -> None:
    _rl.ImageAlphaClear(image, color, threshold)


_rl.ImageAlphaCrop.argtypes = [POINTER(Image), c_float]
_rl.ImageAlphaCrop.restype = None
def image_alpha_crop(image: POINTER(Image), threshold: float) -> None:
    _rl.ImageAlphaCrop(image, threshold)


_rl.ImageAlphaPremultiply.argtypes = [POINTER(Image)]
_rl.ImageAlphaPremultiply.restype = None
def image_alpha_premultiply(image: POINTER(Image)) -> None:
    _rl.ImageAlphaPremultiply(image)


_rl.ImageCrop.argtypes = [POINTER(Image), Rectangle]
_rl.ImageCrop.restype = None
def image_crop(image: POINTER(Image), crop: Rectangle) -> None:
    _rl.ImageCrop(image, crop)


_rl.ImageResize.argtypes = [POINTER(Image), c_int, c_int]
_rl.ImageResize.restype = None
def image_resize(image: POINTER(Image), new_width: int, new_height: int) -> None:
    _rl.ImageResize(image, new_width, new_height)


_rl.ImageResizeNN.argtypes = [POINTER(Image), c_int]
_rl.ImageResizeNN.restype = None
def image_resize_nn(image: POINTER(Image), new_width: int) -> None:
    _rl.ImageResizeNN(image, new_width)


_rl.ImageResizeCanvas.argtypes = [POINTER(Image), c_int, c_int, c_int, c_int, Color]
_rl.ImageResizeCanvas.restype = None
def image_resize_canvas(image: POINTER(Image), new_width: int, new_height: int, offset_x: int, offset_y: int, color: Color) -> None:
    _rl.ImageResizeCanvas(image, new_width, new_height, offset_x, offset_y, color)


_rl.ImageMipmaps.argtypes = [POINTER(Image)]
_rl.ImageMipmaps.restype = None
def image_mipmaps(image: POINTER(Image)) -> None:
    _rl.ImageMipmaps(image)

